# hex_game

./: .gitignore  CMakeLists.txt
include/: .color.hpp.swp  .hex.hpp.swp  .hexboard.hpp.swp  .rock.hpp.swp  color.hpp  hex.hpp  hexboard.hpp  player.hpp  rock.hpp
src/: .color.cpp.swp  .hex.cpp.swp  .hexboard.cpp.swp  .rock.cpp.swp  color.cpp  hex.cpp  hexboard.cpp  rock.cpp
test/: CMakeLists.txt  test1.cpp  testColor.cpp  testHexBoard.cpp  testPlayer.cpp  testRock.cpp
